--- a/sources/0xProto-Italic.glyphspackage/order.plist
+++ b/sources/0xProto-Italic.glyphspackage/order.plist
@@ -578,8 +578,33 @@ asterisk_asterisk,
 asterisk_asterisk_asterisk,
 asterisk_greater,
 numbersign_equal,
+slash_greater,
 slash_slash,
 slash_slash_slash,
+hyphen,
+endash,
+emdash,
+underscore,
+hyphen.spacer,
+parenleft,
+parenright,
+braceleft,
+braceright,
+bracketleft,
+bracketright,
+bracketleft.spacer,
+quotesinglbase,
+quotedblbase,
+quotedblleft,
+quotedblright,
+quoteleft,
+quoteright,
+guillemetleft,
+guillemetright,
+guilsinglleft,
+guilsinglright,
+quotedbl,
+quotesingle,
 period,
 comma,
 colon,
@@ -606,30 +631,6 @@ asterisk.spacer,
 numbersign.spacer,
 slash.spacer,
 periodcentered.loclCAT.case,
-hyphen,
-endash,
-emdash,
-underscore,
-hyphen.spacer,
-parenleft,
-parenright,
-braceleft,
-braceright,
-bracketleft,
-bracketright,
-bracketleft.spacer,
-quotesinglbase,
-quotedblbase,
-quotedblleft,
-quotedblright,
-quoteleft,
-quoteright,
-guillemetleft,
-guillemetright,
-guilsinglleft,
-guilsinglright,
-quotedbl,
-quotesingle,
 baht,
 ampersand_ampersand,
 bar_bracketright,
@@ -668,23 +669,9 @@ less_equal_less,
 less_greater,
 less_less,
 less_less_less,
+less_slash,
+less_slash_greater,
 percent_percent,
-at,
-ampersand,
-paragraph,
-section,
-copyright,
-registered,
-published,
-trademark,
-degree,
-bar,
-brokenbar,
-dagger,
-daggerdbl,
-servicemark,
-ampersand.spacer,
-bar.spacer,
 cent,
 dollar,
 dong,
@@ -846,6 +833,22 @@ boxVerticalSingleAndHorizontalDouble,
 boxVerticalSingleAndLeftDouble,
 boxVerticalSingleAndRightDouble,
 boxLeftDownHeavyAndRightUpLight.001,
+at,
+ampersand,
+paragraph,
+section,
+copyright,
+registered,
+published,
+trademark,
+degree,
+bar,
+brokenbar,
+dagger,
+daggerdbl,
+servicemark,
+ampersand.spacer,
+bar.spacer,
 dieresiscomb,
 dieresiscomb_gravecomb,
 dieresiscomb_acutecomb,
