--- a/sources/0xProto.glyphspackage/fontinfo.plist
+++ b/sources/0xProto.glyphspackage/fontinfo.plist
@@ -50,7 +50,7 @@ value = 0;
 }
 );
 date = "2026-01-06 06:05:30 +0000";
-familyName = 0xProto;
+familyName = Lucid;
 featurePrefixes = (
 {
 automatic = 1;
@@ -1001,7 +1001,7 @@ key = postscriptFullNames;
 values = (
 {
 language = dflt;
-value = "0xProto Regular";
+value = "Lucid Regular";
 }
 );
 }
@@ -1022,7 +1022,7 @@ key = postscriptFullNames;
 values = (
 {
 language = dflt;
-value = "0xProto Bold";
+value = "Lucid Bold";
 }
 );
 }
@@ -1057,13 +1057,13 @@ key = copyrights;
 values = (
 {
 language = dflt;
-value = "0xType Project Authors (https://github.com/0xType)";
+value = "ShalokShalom Project Authors (https://github.com/ShalokShalom)";
 }
 );
 },
 {
 key = manufacturerURL;
-value = "https://0xtype.dev/";
+value = "https://ShalokShalom.dev/";
 },
 {
 key = vendorID;
